fixed static route in html page

--- a/socket/client/register/index.html
+++ b/socket/client/register/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/register/style.css">
 </head>
 <body>
 
@@ -30,6 +30,6 @@
   </div>
 </form>
 
-<script src="script.js"></script>
+<script src="/register/script.js"></script>
 </body>
 </html>
