--- a/socket/client/login/index.html
+++ b/socket/client/login/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login </title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/login/style.css" />
 </head>
 <body>
     <form>
@@ -28,6 +28,6 @@
           <p>Don't have an account? <a href="/register">Register</a>.</p>
         </div>
       </form>
-<script src="script.js"></script>
+<script src="/login/script.js"></script>
 </body>
 </html>
