--- a/socket/client/main/index.html
+++ b/socket/client/main/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Chat</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/main/style.css" />
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
 
     
@@ -31,7 +31,7 @@
 
     </main>
 
-    <script src="script.js" ></script>
+    <script src="/main/script.js" ></script>
 </body>
 
 
